--- a/RedisLive/conf/redis-live.conf
+++ b/RedisLive/conf/redis-live.conf
@@ -4,19 +4,14 @@
         {
             "server": "redis",
             "port" : 6379
-        },
-
-        {
-            "server": "192.168.188.203",
-            "port" : 6379
         }
     ],
 
-    "DataStoreType" : "redis",
+    "DataStoreType" : "sqlite",
 
-    "RedisStatsServer":
+    "SqliteStatsStore" :
     {
-        "server" : "192.168.188.203",
-        "port" : 6379
+        "path":  "db/redislive.sqlite"
     }
+
 }
